--- a/Repay_Bank/Repay_Bank.BusinessLayer/Repay_Bank.BusinessLayer.csproj
+++ b/Repay_Bank/Repay_Bank.BusinessLayer/Repay_Bank.BusinessLayer.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.16">
       <PrivateAssets>all</PrivateAssets>
@@ -21,6 +23,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Repay_Bank.DataAccessLayer\Repay_Bank.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\Repay_Bank.DTO\Repay_Bank.DTO.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ValidationRules\AppRoleValidationRules\" />
+    <Folder Include="ValidationRules\CustomerAccountValidationRules\" />
+    <Folder Include="ValidationRules\CustomerAccountProcessValidationRules\" />
   </ItemGroup>
 
 </Project>
