--- a/Repay_Bank/Repay_Bank.DTO/Repay_Bank.DTO.csproj
+++ b/Repay_Bank/Repay_Bank.DTO/Repay_Bank.DTO.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\Repay_Bank.EntityLayer\Repay_Bank.EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOS\CustomerAccountProcessDtos\" />
+    <Folder Include="DTOS\AppRoleDtos\" />
+    <Folder Include="DTOS\CustomerAccountDtos\" />
+  </ItemGroup>
+
 </Project>
